--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,85 +7,44 @@ a{
     text-decoration: none;
 }
 
-.bg-inicio {
-    display: flex;
-    flex-direction: column;
-    background-image: url(../img/secretay1.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-}
-
-.bg-inicio img{
-    width: 100%;
-    height: auto;
-}
-
 h1{
     font-size: 2rem;
     text-align: center;
 }
 
-/* Texto de inicio */
-/* .text1 {
+.info-hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
-  left: 975px;
-  top: -710px;
-  z-index: 1;
+  z-index: 100;
+  top: 60%;
+  left: 40%;
 }
 
-.text1 .modern {
-    font-weight: 400;
-    font-size: 45px;
+.dudas-info {
+  text-align: center;
 }
 
-.text1 h5 {
-    font-weight: 600;
-    font-size: 1.5em;
-    letter-spacing: 1px;
+.social-info {
+  text-align: center;
 }
 
-.img1 {
-    position: absolute;
-    left: 1030px;
-    top: -640px;
-    z-index: 1;
-  }
-
-.text2 {
-    position: absolute;
-    left: 970px;
-    top: -560px;
-    z-index: 1;
-  }
-
-.text2 .slideshow {
-    font-weight: 600;
-    font-size: 2.5em;
-    letter-spacing: 4px;
+.logo-insta {
+  margin-top: 1em;
 }
 
-.img2 {
-    position: absolute;
-    left: 1030px;
-    top: -480px;
-    z-index: 1;
-  }
+.slider-section {
+  position: relative;
+  z-index: -10;
+}
 
-.img3 {
-    position: absolute;
-    left: 1030px;
-    top: -415px;
-    z-index: 1;
-  }
-
-  .txt {
-    top: 50%;
-    left: 50%;
-    margin: -400px 0 0 -25px; 
-  } */
+.cards-section {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 70px;
+}
 
 .carousel-control-next, .carousel-control-prev {
     position: absolute;
