--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,9 @@
     margin: 0; padding: 0;
 }
 
-a{
+/* a{
     text-decoration: none;
-}
+} */
 
 h1{
     font-size: 2rem;
@@ -26,12 +26,20 @@ h1{
   text-align: center;
 }
 
-.social-info {
-  text-align: center;
+.fa-whatsapp {
+  color: #fff;
 }
 
-.logo-insta {
-  margin-top: 1em;
+.fa-facebook {
+  color: #fff;
+}
+
+.fa-instagram {
+  color: #fff;
+}
+
+.social-info {
+  text-align: center;
 }
 
 .slider-section {
@@ -47,19 +55,16 @@ h1{
 }
 
 .carousel-control-next, .carousel-control-prev {
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     bottom: 0;
-    z-index: 1;
+    /* z-index: 1; */
     display: flex;
     align-items: center;
     justify-content: center;
     width: 10%;
-    padding: 0;
-    color: #fff;
-    text-align: center;
-    background: 0 0;
-    border: 0;
-    opacity: .5;
-    transition: opacity .15s ease;
+}
+
+.navbar {
+  backdrop-filter: blur(15px);
 }
