--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,21 @@ h1{
     text-align: center;
 }
 
+.click-btn {
+  position: absolute;
+  z-index: 10;
+  bottom: 4rem;
+  left: 8rem;
+}
+
+.click-btn .iconify-click {
+  transform: rotate(-20deg);
+  bottom: -0.5rem;
+  left: 14rem;
+  position: absolute;
+  color: #f6f3f2;
+}
+
 /* ============================ SECCIÓNES =================================*/
 
 .section-sp {
@@ -85,7 +100,7 @@ img.image-asesoria {
   height: 70px;
   width: 260px;
   background-color: #73c4d8;
-  border-radius: 14%;
+  border-radius: 20px;
 }
 
 .btn-flot .btn-2 {
@@ -95,7 +110,7 @@ img.image-asesoria {
   height: 70px;
   width: 260px;
   background-color: #73c4d8;
-  border-radius: 14%;
+  border-radius: 20px;
 }
 
 .btn-flot .btn-3 {
@@ -105,7 +120,7 @@ img.image-asesoria {
   height: 70px;
   width: 260px;
   background-color: #73c4d8;
-  border-radius: 14%;
+  border-radius: 20px;
 }
 
 .btn-flot .btn-4 {
@@ -115,7 +130,7 @@ img.image-asesoria {
   height: 70px;
   width: 260px;
   background-color: #73c4d8;
-  border-radius: 14%;
+  border-radius: 20px;
 }
 
 .btn-flot .btn-5 {
@@ -125,7 +140,7 @@ img.image-asesoria {
   height: 70px;
   width: 260px;
   background-color: #73c4d8;
-  border-radius: 14%;
+  border-radius: 20px;
 }
 
 .btn-flot .btn-6 {
@@ -135,7 +150,7 @@ img.image-asesoria {
   height: 70px;
   width: 260px;
   background-color: #73c4d8;
-  border-radius: 14%;
+  border-radius: 20px;
 }
 
 .btn-flot .necesitas {
