--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,11 @@ h1{
     text-align: center;
 }
 
+h2{
+  text-align: center;
+  font-family: "Muli", sans-serif;
+}
+
 .click-btn {
   position: absolute;
   z-index: 10;
@@ -43,6 +48,7 @@ h1{
 .section-sp {
   padding: 120px 0;
   overflow: hidden;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* ======== SECCIÓN QUIENES SOMOS ======== */
