--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,19 @@ h2{
   right: 85px;
   left: 85px;
   z-index: 1030;
-  border-radius: 20px;
+  border-radius: 0px 0px 55px 55px;
+}
+
+/* ========== TRANSPARENT NAVBAR ===== */
+
+
+.navbar {
+  backdrop-filter: blur(15px);
+  background-color: white;
+}
+
+.navbar-color{
+  background-color: black;
 }
 
 /* ============================ SECCIÓNES =================================*/
@@ -110,6 +122,7 @@ img.image-asesoria {
   margin-right: calc(-.5 * var(--bs-gutter-x));
   margin-left: calc(-.5 * var(--bs-gutter-x));
 }
+
 
 
 /* ======== CINTA NEGRA DE CADA SECCION ======= */
@@ -261,6 +274,29 @@ img.image-asesoria {
   transform: translate(12px, 12px);
 }
 
+.explo-img {
+  position: absolute;
+  z-index: 100;
+  top: 614px;
+  left: 1325px;
+  width: 120px;
+}
+
+.circulo {
+  width: 80px;
+  height: 80px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background: #5cb85c;
+}
+
+.circulo-dist{
+  position: absolute;
+  z-index: 100;
+  top: 635px;
+  left: 1342px;
+}
 /* =========== REDES SOCIALES ========== */
 
 .info-hero {
@@ -351,12 +387,6 @@ img.image-asesoria {
     width: 10%;
 }
 
-/* ========== TRANSPARENT NAVBAR ===== */
-
-
-.navbar {
-  backdrop-filter: blur(15px);
-}
 
 
 
