--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -435,3 +435,19 @@ img, svg {
 *, ::after, ::before {
   box-sizing: border-box;
 }
+
+.logo-2{
+  position: absolute;
+  z-index: 100;
+  top: 100px;
+  left: 1230px;
+  height: auto;
+  width: 250px;
+}
+
+.g-abaco{
+  position: absolute;
+  z-index: 100;
+  top: 720px;
+  left: 350px;
+}
