--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,7 +462,11 @@ img, svg {
 }
 
 .bandera-eua{
-  width: 25px;
+  width: 26px;
+}
+
+.bandera-mx{
+  width: 28px;
 }
 
 .aviso-priv{
@@ -474,7 +478,7 @@ img, svg {
 
 .navbar .navbar-nav .nav-link {
   color: #000000;
-  font-size: 1.3em;
+  font-size: 1.4em;
 }
 .navbar .navbar-nav .nav-link:hover{
   color: #808080;
@@ -484,6 +488,6 @@ img, svg {
   padding: 0 1em;
 }
 .navbar .navbar-nav .nav-item:not(:last-child) .nav-link {
-  border-right: 2px solid #808080;
+  border-right: 3px solid #808080;
 }
 }
